PyQuest/src/test/semantic_analysis/valid/test011.ql
// Compatible types for subtraction operation
form testForm {
	"First Question"
	someIdentifier : decimal = 10.0 - 10
}