PyQuest/src/test/semantic_analysis/invalid/test021.ql
// Incompatible result type for subtraction operation
form testForm {
	"First Question"
	someIdentifier : integer = 10.1 - 10
}